# Cocoon

./: Cargo.toml  README.md
src/: bloom.rs  compression.rs  config.rs  error.rs  extension.rs  index.rs  lib.rs  metrics.rs  query.rs  store.rs  wal.rs
src/shard/: error.rs  info.rs  manager.rs  mod.rs  period.rs  util.rs
