[package]
name = "cocoon_rs"
version = "0.1.0"
edition = "2021"
description = "High-performance ACID-compliant time-indexed log database for ChrysalisRS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrysalis-rs/cocoon_rs"
documentation = "https://docs.rs/cocoon_rs"
readme = "README.md"
keywords = ["logging", "database", "storage", "chrysalis", "time-series"]
categories = ["database-implementations", "development-tools"]
authors = ["ChrysalisRS Team <contact@chrysalis-rs.com>"]

[dependencies]
# Required dependencies
chrysalis_rs = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
parking_lot = "0.12"
bincode = "1.3"
byteorder = "1.4"
crc32fast = "1.3"
rayon = "1.7"

# Compression libraries
lz4 = "1.24"
zstd = "0.12"

# File and memory management
memmap2 = "0.5"
fs2 = "0.4"

# Concurrency
crossbeam = "0.8"
atomic = "0.5"

# Optional dependencies
tracing = { version = "0.1", optional = true }
metrics = { version = "0.20", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.28", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"
tempfile = "3.5"
rand = "0.8"
test-log = "0.2"
anyhow = "1.0"
tokio-test = "0.4"

[features]
default = ["compression"]
compression = []
metrics = ["dep:metrics"]
tracing = ["dep:tracing"]
async = ["dep:async-trait", "dep:tokio"]
encryption = []
cloud-storage = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "query_examples"
path = "examples/query_examples.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[[example]]
name = "chrysalis_integration"
path = "examples/chrysalis_integration.rs"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
lto = "thin"